force-app/main/default/objects/Exemption__c/Exemption__c.object-meta.xml
<CustomObject>
    <label>Exemption</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Exemption Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>