force-app/main/default/objects/Exemption__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exemptions (Agency)</relationshipLabel>
    <relationshipName>Agency_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>