force-app/main/default/objects/Exemption__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exemptions (Agent)</relationshipLabel>
    <relationshipName>Agent_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>