force-app/main/default/objects/Exemption__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exemptions (Business)</relationshipLabel>
    <relationshipName>Business_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>