force-app/main/default/objects/Exemption__c/fields/DigitallyAssisted__c.field-meta.xml
<CustomField>
    <fullName>DigitallyAssisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digitally Assisted</label>
    <type>Checkbox</type>
</CustomField>