force-app/main/default/objects/Exemption__c/fields/EPC_Band__c.field-meta.xml
<CustomField>
    <fullName>EPC_Band__c</fullName>
    <label>EPC Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EPC_Bands</valueSetName>
    </valueSet>
</CustomField>