force-app/main/default/objects/Exemption__c/fields/EPC_Certificate__c.field-meta.xml
<CustomField>
    <fullName>EPC_Certificate__c</fullName>
    <description>System field to enable the EPC Certificate to be available in the public register for the URL</description>
    <label>EPC Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>