force-app/main/default/objects/Exemption__c/fields/EPC_Date__c.field-meta.xml
<CustomField>
    <fullName>EPC_Date__c</fullName>
    <label>EPC Date</label>
    <type>Date</type>
</CustomField>