force-app/main/default/objects/Exemption__c/fields/EPC_Rating__c.field-meta.xml
<CustomField>
    <fullName>EPC_Rating__c</fullName>
    <label>EPC Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>