force-app/main/default/objects/Exemption__c/fields/Exemption_Accuracy_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Accuracy_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exemption Accuracy Confirmed</label>
    <type>Checkbox</type>
</CustomField>