force-app/main/default/objects/Exemption__c/fields/Full_Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Property_Address__c</fullName>
    <formula>TRIM(
    PropertyAddress__c &amp;
    IF(
        NOT(ISBLANK(PropertyCity__c)),
        &quot;, &quot; &amp; PropertyCity__c,
        &quot;&quot;
    ) &amp;
    IF(
        NOT(ISBLANK(PropertyCounty__c)),
        &quot;, &quot; &amp; PropertyCounty__c,
        &quot;&quot;
    ) &amp;
    IF(
        NOT(ISBLANK(PropertyPostcode__c)),
        &quot;, &quot; &amp; PropertyPostcode__c,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Property Address</label>
    <type>Text</type>
</CustomField>