force-app/main/default/objects/Exemption__c/fields/InformationGivenIsAccurate__c.field-meta.xml
<CustomField>
    <fullName>InformationGivenIsAccurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information Given Is Accurate</label>
    <type>Checkbox</type>
</CustomField>