force-app/main/default/objects/Exemption__c/fields/InternalExemptionExpiry__c.field-meta.xml
<CustomField>
    <fullName>InternalExemptionExpiry__c</fullName>
    <formula>OR(
    TODAY() = ADDMONTHS(DATEVALUE(Registered_Date__c), 60),
    TODAY() = ADDMONTHS(DATEVALUE(Registered_Date__c), 54),
    TODAY() = ADDMONTHS(DATEVALUE(Registered_Date__c), 6)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Exemption Expiry</label>
    <type>Checkbox</type>
</CustomField>