force-app/main/default/objects/Exemption__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exemptions (Landlord)</relationshipLabel>
    <relationshipName>Landlord_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>