force-app/main/default/objects/Exemption__c/fields/LandlordBusinessName__c.field-meta.xml
<CustomField>
    <fullName>LandlordBusinessName__c</fullName>
    <label>Landlord Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>