force-app/main/default/objects/Exemption__c/fields/LandlordCountry__c.field-meta.xml
<CustomField>
    <fullName>LandlordCountry__c</fullName>
    <label>Landlord Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PRSE_Countries</valueSetName>
    </valueSet>
</CustomField>