force-app/main/default/objects/Exemption__c/fields/LandlordCounty__c.field-meta.xml
<CustomField>
    <fullName>LandlordCounty__c</fullName>
    <label>Landlord County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>