force-app/main/default/objects/Exemption__c/fields/LandlordEmail__c.field-meta.xml
<CustomField>
    <fullName>LandlordEmail__c</fullName>
    <label>Landlord Email</label>
    <type>Email</type>
</CustomField>