force-app/main/default/objects/Exemption__c/fields/LandlordFullName__c.field-meta.xml
<CustomField>
    <fullName>LandlordFullName__c</fullName>
    <formula>LandlordFirstName__c &amp; &quot; &quot; &amp; LandlordLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord Full Name</label>
    <type>Text</type>
</CustomField>