force-app/main/default/objects/Exemption__c/fields/LandlordLastName__c.field-meta.xml
<CustomField>
    <fullName>LandlordLastName__c</fullName>
    <label>Landlord Last Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>