force-app/main/default/objects/Exemption__c/fields/LandlordPhone__c.field-meta.xml
<CustomField>
    <fullName>LandlordPhone__c</fullName>
    <label>Landlord Phone</label>
    <type>Phone</type>
</CustomField>