force-app/main/default/objects/Exemption__c/fields/LandlordPostcode__c.field-meta.xml
<CustomField>
    <fullName>LandlordPostcode__c</fullName>
    <label>Landlord Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>