force-app/main/default/objects/Exemption__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>PEX_REFNO value from the Oracle database on the NEC system</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>