force-app/main/default/objects/Exemption__c/fields/Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Authority</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exemptions (Local Authority)</relationshipLabel>
    <relationshipName>Local_Authority_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>