force-app/main/default/objects/Exemption__c/fields/Local_Authority_Notes__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority_Notes__c</fullName>
    <label>Local Authority Notes</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>