force-app/main/default/objects/Exemption__c/fields/OtherReasonForCallingADRoute__c.field-meta.xml
<CustomField>
    <fullName>OtherReasonForCallingADRoute__c</fullName>
    <label>Other Reason For Calling AD Route</label>
    <length>200</length>
    <type>Text</type>
</CustomField>