force-app/main/default/objects/Exemption__c/fields/PropertyCountry__c.field-meta.xml
<CustomField>
    <fullName>PropertyCountry__c</fullName>
    <label>Property Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>