force-app/main/default/objects/Exemption__c/fields/PropertyCounty__c.field-meta.xml
<CustomField>
    <fullName>PropertyCounty__c</fullName>
    <label>Property County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>