force-app/main/default/objects/Exemption__c/fields/PropertyUPRN__c.field-meta.xml
<CustomField>
    <fullName>PropertyUPRN__c</fullName>
    <label>Property UPRN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>