force-app/main/default/objects/Exemption__c/fields/ReasonForCallingADRoute__c.field-meta.xml
<CustomField>
    <fullName>ReasonForCallingADRoute__c</fullName>
    <label>Reason For Calling AD Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No access to the internet</fullName>
            </value>
            <value>
                <fullName>Problems using the service</fullName>
            </value>
            <value>
                <fullName>Unable to upload document</fullName>
            </value>
            <value>
                <fullName>Unable to use a computer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>