force-app/main/default/objects/Exemption__c/fields/Ref_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Ref_Legacy__c</fullName>
    <description>Holds previous system reference</description>
    <label>Ref Legacy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>