force-app/main/default/objects/Exemption__c/fields/Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Ref_Number__c</fullName>
    <description>Combines Ref Text Prefix and Exemption Number if it is a legacy exemption</description>
    <formula>IF(ISBLANK(Ref_Legacy__c),Ref_Text_Prefix__c + &apos;-&apos; + Name,Ref_Legacy__c)</formula>
    <label>Ref Number</label>
    <type>Text</type>
</CustomField>