force-app/main/default/objects/Exemption__c/fields/Ref_Text_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Ref_Text_Prefix__c</fullName>
    <formula>IF(ISPICKVAL(PropertyType__c,&quot;Residential&quot;),&quot;D&quot;,&quot;ND&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Residential/ Domestic = D, Commercial/ Non-Domestic = ND</inlineHelpText>
    <label>Ref Text Prefix</label>
    <type>Text</type>
</CustomField>