force-app/main/default/objects/Exemption__c/fields/Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date__c</fullName>
    <label>Registered Date</label>
    <type>DateTime</type>
</CustomField>