force-app/main/default/objects/Exemption__c/fields/View_EPC_Certificate__c.field-meta.xml
<CustomField>
    <fullName>View_EPC_Certificate__c</fullName>
    <formula>IF(
    ISBLANK(EPC_Certificate__c),
    &quot;&quot;,
    HYPERLINK(
        &quot;https://find-energy-certificate.service.gov.uk/energy-certificate/&quot; &amp; EPC_Certificate__c,
        &quot;View EPC (Opens in a new tab)&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View EPC Certificate</label>
    <type>Text</type>
</CustomField>