force-app/main/default/objects/Exemption__c/listViews/All_Exemptions.listView-meta.xml
<ListView>
    <fullName>All_Exemptions</fullName>
    <columns>NAME</columns>
    <columns>Ref_Number__c</columns>
    <columns>PropertyType__c</columns>
    <columns>PropertyAddress__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Exemptions</label>
</ListView>